--- a/erp-ui/src/app/menu/menu.component.html
+++ b/erp-ui/src/app/menu/menu.component.html
@@ -43,7 +43,7 @@
           <input class="form-control" type="search" placeholder="Search..." aria-label="Search">
         </form>
         <a class="nav-link active me-3" aria-current="page" routerLink="/profil">
-          <i class="fa-solid fa-user fa-lg fa-4x text-white"></i>
+          <i class="fas fa-user fa-2x" ></i>
         </a>
         <button class="btn btn-danger" (click)="logout()">
           <i class="fas fa-sign-out-alt"></i>
@@ -53,4 +53,5 @@
     </div>
   </div>
 </nav>
+
 
