--- a/erp-ui/src/app/add-edit-intervention/add-edit-intervention.component.html
+++ b/erp-ui/src/app/add-edit-intervention/add-edit-intervention.component.html
@@ -44,8 +44,8 @@
 
 
         <div class="mb-3">
-          <label for="approvedBy" class="form-label"><strong>Approuvé par</strong></label>
-          <select class="form-select" id="approvedBy" [(ngModel)]="approvedBy" name="approvedBy" required>
+          <label for="approvedBy" class="form-label"><strong>Approuvée par</strong></label>
+          <select class="form-select" id="approvedBy" [(ngModel)]="approvedBy.name" name="approvedBy" required>
             <option *ngFor="let u of users" [ngValue]="u">{{ u.name }} {{ u.surname }}</option>
           </select>
         </div>
@@ -92,7 +92,7 @@
 
         <!-- Pièces -->
         <div class="mb-3">
-          <label class="form-label"><strong>Pièces Affectées</strong></label>
+          <label class="form-label"><strong>Staff Affecté</strong></label>
           <div class="checkbox-list-container">
           <div *ngFor="let user of users">
             <div class="form-check checkbox-list-container">
@@ -115,34 +115,35 @@
         <!-- Date création -->
         <div class="mb-3">
           <label for="createdAt" class="form-label"><strong>Créé le</strong></label>
-          <input type="datetime-local" class="form-control" id="createdAt" [(ngModel)]="createdAt" name="createdAt">
+          <input type="date" class="form-control" id="createdAt" [(ngModel)]="createdAt" name="createdAt">
         </div>
 
         <!-- Date MAJ -->
         <div class="mb-3">
-          <label for="updatedAt" class="form-label"><strong>Mis à jour le</strong></label>
-          <input type="datetime-local" class="form-control" id="updatedAt" [(ngModel)]="updatedAt" name="updatedAt">
+          <label for="updatedAt" class="form-label"><strong>Mise à jour le</strong></label>
+          <input type="date" class="form-control" id="updatedAt" [(ngModel)]="updatedAt" name="updatedAt">
         </div>
 
         <!-- Mis à jour par -->
         <div class="mb-3">
-          <label for="updatedBy" class="form-label"><strong>Mis à jour par</strong></label>
-          <input type="text" class="form-control" id="updatedBy" [(ngModel)]="updatedBy" name="updatedBy">
+          <label for="updatedBy" class="form-label"><strong>Mise à jour par</strong></label>
+          <input type="text" class="form-control" id="updatedBy" [(ngModel)]="updatedBy.name" name="updatedBy">
         </div>
 
         <!-- Département -->
-        <div class="mb-3">
-          <label for="equipmentId" class="form-label"><strong>Equipment</strong></label>
-          <select class="form-select" id="equipmentId" [(ngModel)]="equipmentId" name="equipmentId" required>
+        <div class="mb-3 ">
+          <label for="equipmentId" class="form-label "><strong>Equipement</strong></label>
+          <select class="form-select equipment" id="equipmentId" [(ngModel)]="equipmentId" name="equipmentId" required>
             <option *ngFor="let d of equipments" [ngValue]="d">{{ d.name }}</option>
           </select>
         </div>
+
 
       </div>
     </div>
 
     <!-- Boutons -->
-    <div class="text-end mt-4">
+    <div class="text-end mt-2 p-3">
       <button type="submit" class="btn btn-primary">{{ isEditing ? 'Mettre à jour' : 'Créer' }}</button>
       <button type="button" class="btn btn-secondary ms-2" (click)="goBack()">Retour</button>
     </div>
