--- a/erp-ui/src/app/department/department.component.html
+++ b/erp-ui/src/app/department/department.component.html
@@ -1,30 +1,38 @@
 <!-- Sidebar -->
-<nav class="d-flex flex-column bg-dark text-white p-3" style="width: 200px; height: 100vh;">
+<nav class="d-flex flex-column  text-white p-2" style="width: 200px; height: 100vh; background-color: #b1b5b3;">
   <h4 class="mb-4">Menu</h4>
-
   <!-- Lien principal -->
   <a routerLink="/profil" class="nav-link text-white mb-2 item">
     <i class="fas fa-home me-2"></i> Profil
   </a>
-
-  <!-- Lien de section avec sous-liens affichés directement -->
-  <div class="mb-2">
-    <div class="nav-link text-white mb-1 item">
-      <i class="fas fa-building me-2"></i> Usine
-    </div>
-    <div class="ms-3 d-flex flex-column">
-      <a
-        *ngFor="let dep of departments"
-        class="nav-link text-white mb-1 sous-item"
-        [routerLink]="['/department', dep.id]"
-      >
-        ➤ {{ dep.name }}
-      </a>
-
-      <!-- Liens statiques -->
-      <a class="nav-link text-white mb-1 sous-item" routerLink="/equipment">➤ Ajouter Departement</a>
-
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-heading-departments">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#flush-collapse-departments"
+          aria-expanded="false"
+          aria-controls="flush-collapse-departments">
+          Départements
+        </button>
+      </h2>
+      <div
+        id="flush-collapse-departments"
+        class="accordion-collapse collapse"
+        aria-labelledby="flush-heading-departments"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item" *ngFor="let dep of departments">
+                <a [routerLink]="['/department', dep.id]" class="text-decoration-none">
+                  {{ dep.name }}
+                </a>
+              </li>
+            </ul>
+        </div>
+      </div>
     </div>
   </div>
-
 </nav>
