--- a/erp-ui/src/app/production/production.component.html
+++ b/erp-ui/src/app/production/production.component.html
@@ -1,1 +1,14 @@
-<p>production works!</p>
+<div class="container-fluid mt-3">
+  <div class="row"></div>
+  <div class="row ">
+<div class="card text-bg-secondary m-3 " style="max-width: 18rem;" *ngFor="let eq of equipments ">
+    <div class="card-header text-center"><strong>{{ eq.name}}</strong></div>
+  <div class="card-body">
+    <h6 class="card-title">{{ eq.name}} </h6>
+    <p class="card-text">
+
+    </p>
+  </div>
+</div>
+  </div>
+</div>
