--- a/erp-ui/src/app/intervention/intervention.component.html
+++ b/erp-ui/src/app/intervention/intervention.component.html
@@ -30,7 +30,7 @@
               href="javascript:void(0);"
               role="button"
               (click)="getInterventionsByApprovedBy(currentUser.id)">
-              Bon en attente d'approbation
+              Bons Relatifs
             </a>
           </li>
 
